[tool.poetry]
name = "jetblack-metrics"
version = "1.0.0"
description = "Generic metrics and context bases monitoring"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "jetblack_metrics" },
]
repository = "https://github.com/rob-blackbourn/jetblack-metrics"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-runner = "^5.1"
pylint = "^2.3"
mypy = "^0.720.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
